crates/paladin-auth-cli/tests/snapshots/cli_json_snapshots__snapshot_destroy_help_envelope.snap
---
source: crates/paladin-auth-cli/tests/cli_json_snapshots.rs
expression: parse_stdout_json(&out)
---
{
  "help": {
    "command": "paladin-auth destroy",
    "text": "[help-text]"
  }
}
