crates/paladin-auth-cli/tests/snapshots/cli_json_snapshots__snapshot_destroy_partial_failure_unlink_backup_envelope.snap
---
source: crates/paladin-auth-cli/tests/cli_json_snapshots.rs
expression: parse_stderr_json(&out)
---
{
  "backup_deleted": false,
  "error_kind": "io_error",
  "operation": "unlink_backup_file",
  "path": "[vault-path]",
  "primary_deleted": true
}
