crates/paladin-auth-cli/tests/snapshots/cli_json_snapshots__snapshot_edit_envelope.snap
---
source: crates/paladin-auth-cli/tests/cli_json_snapshots.rs
expression: parse_stdout_json(&out)
---
{
  "account": {
    "algorithm": "sha1",
    "counter": null,
    "created_at": "[timestamp]",
    "digits": 6,
    "icon_hint": "github",
    "id": "[uuid]",
    "issuer": "GitHub",
    "kind": "totp",
    "label": "alice2",
    "period": 30,
    "updated_at": "[timestamp]"
  }
}
