crates/paladin-auth-cli/tests/snapshots/cli_json_snapshots__snapshot_export_plaintext_envelope.snap
---
source: crates/paladin-auth-cli/tests/cli_json_snapshots.rs
expression: parse_stdout_json(&assert)
---
{
  "format": "otpauth",
  "written": "[path]"
}
