crates/paladin-auth-cli/tests/snapshots/cli_json_snapshots__snapshot_invalid_header_envelope.snap
---
source: crates/paladin-auth-cli/tests/cli_json_snapshots.rs
expression: parse_stderr_json(&assert)
---
{
  "error_kind": "invalid_header"
}
