crates/paladin-auth-cli/tests/snapshots/cli_json_snapshots__snapshot_list_empty_vault_envelope.snap
---
source: crates/paladin-auth-cli/tests/cli_json_snapshots.rs
expression: parse_stdout_json(&assert)
---
{
  "accounts": []
}
